--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
+    "@material-tailwind/react": "^2.0.8",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
@@ -16,6 +18,10 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-hook-form": "^7.45.4",
+    "react-icons": "^4.10.1",
+    "react-ts-tradingview-widgets": "^1.0.16",
+    "tailwindcss": "3.3.3",
+    "yup": "^1.2.0"
   }
 }
