--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
+    "react-select": "^5.7.4",
     "react-ts-tradingview-widgets": "^1.0.16",
     "tailwindcss": "3.3.3",
     "yup": "^1.2.0"
